--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "CodeTV Admin API",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "coverage": "jest --coverage"
   },
   "keywords": [],
   "author": "",
@@ -14,8 +15,15 @@
     "@swc/core": "^1.6.5",
     "@swc/jest": "^0.2.36",
     "@types/jest": "^29.5.12",
+    "@types/lodash": "^4.17.6",
+    "@types/uuid": "^10.0.0",
     "jest": "^29.7.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.2"
+  },
+  "dependencies": {
+    "class-validator": "^0.14.1",
+    "lodash": "^4.17.21",
+    "uuid": "^10.0.0"
   }
 }
